footer logo alignment fix

--- a/Styles/_footer.scss
+++ b/Styles/_footer.scss
@@ -57,6 +57,7 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
 }
 
 .footer-logo {
